# pretalx-halfnarp

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  justfile  pyproject.toml  renovate.json  setup.py
.github/workflows/: style.yml  tests.yml
pretalx_halfnarp/: __init__.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
pretalx_halfnarp/locale/de_DE/LC_MESSAGES/: django.mo  django.po
pretalx_halfnarp/migrations/: 0001_initial.py  0002_add_event_column_to_hashes.py
pretalx_halfnarp/static/pretalx_halfnarp/: frontend.css  frontend.js  frontend.scss  organiser.css  organiser.scss
pretalx_halfnarp/templates/pretalx_halfnarp/: frontend.html  organiser.html  settings.html
pretalx_halfnarp/views/: __init__.py  frontend.py  frontend_preferences_api.py  organiser.py
tests/: conftest.py  test_models.py  test_signals.py  test_views.py
