[project]
name = "pretalx-halfnarp"
dynamic = ["version"]
description = """
Pretalx-Halfnarp is a Plugin that helps you to estimate the interest in
your submissions and plan room-sizes accordingly by scheduling the most
requested submissions into the larger rooms. It can also help you avoid
overlaps by correlating submissions that are preferred by the same
people so that you can plan them at different times.

Halfnarp is an anagram of Fahrplan, a not-yet sorted Fahrplan"""
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["pretalx"]
authors = [
    {name = "Peter Körner", email = "pkoerner@seibert-media.net"},
    {name = "Franziska Kunsmann", email = "fkunsmann@seibert-media.net"},
]
maintainers = [
    {name = "Franziska Kunsmann", email = "fkunsmann@seibert-media.net"},
]

dependencies = [
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
]

[project.optional-dependencies]
dev = [
    "djhtml",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "ruff",
]

[project.entry-points."pretalx.plugin"]
pretalx_halfnarp = "pretalx_halfnarp:PretalxPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretalx_plugin_build.build:CustomBuild"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project.urls]
homepage = "https://github.com/seibert-media/pretalx-halfnarp"
repository = "https://github.com/seibert-media/pretalx-halfnarp.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretalx_halfnarp.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]
namespaces = false

[tool.check-manifest]
ignore = [".*", "tests/*", "justfile"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pretalx.common.settings.test_settings"
django_find_project = false
addopts = "--cov=pretalx_halfnarp --cov-report=term-missing:skip-covered --cov-config=pyproject.toml"

[tool.coverage.run]
branch = true
relative_files = true
source = ["pretalx_halfnarp"]
omit = ["*/migrations/*", "*/urls.py", "*/tests/*"]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "def __str__",
  "if settings.DEBUG",
  "NOQA",
  "noqa",
  "NotImplementedError",
]
